LogEventFilter and DatabaseLogEventObserver support exclusive filtering for logger and marker
